# ogitor

./: .gitignore  .gitmodules  .hgeol  .hgignore  AUTHORS  CMakeLists.txt  CMakeLists.txt.orig  COPYING  ChangeLog.txt  LICENSE  OGITOR.pc  OGRE_COPYING  ReadMe.md  ReadMe.txt  SetByatisVariable.bat  default.doxygen  gen-qt-projectfile  gen-qt-projectfile.bat  update_translations.bat
Dependencies/: CMakeLists.txt
Dependencies/Angelscript/: CMakeLists.txt  source.txt
Dependencies/GenericImageEditor/: CMakeLists.txt
Dependencies/GenericTextEditor/: CMakeLists.txt
Dependencies/ImageConverter/: CMakeLists.txt
Dependencies/MeshMagick/: AUTHORS  CMakeLists.txt  LICENSE.txt  Makefile.am  README  TEMPLATE  TODO  bootstrap  configure.in  meshmagick.pc.cmake  meshmagick.pc.in
Dependencies/OFS/: .CMakeLists.txt.kate-swp  CMakeLists.txt
Dependencies/OgreTerrainConverter/: CMakeLists.txt
Dependencies/PagedGeometry/: CMakeLists.txt
Dependencies/PythonQt/: CMakeLists.txt
Dependencies/SkyX/: AtmosphereManager.cpp  AtmosphereManager.h  BasicController.cpp  CMakeLists.txt  CloudsManager.cpp  CloudsManager.h  ColorGradient.cpp  ColorGradient.h  GPUManager.cpp  GPUManager.h  MeshManager.cpp  MeshManager.h  MoonManager.cpp  MoonManager.h  Prerequisites.cpp  Prerequisites.h  SkyX.cpp  SkyX.h  VCloudsManager.cpp  VCloudsManager.h
Dependencies/TinyXML/: CMakeLists.txt
Dependencies/libnoise/: source
Dependencies/log4cplus/: CMakeLists.txt
Dependencies/lua/: CMakeLists.txt
Dependencies/pythonqt/: CMakeLists.txt
Help/: CMakeLists.txt  about.txt  build_help.sh  collection_ogitor.qhcp  compile_docs.bat  controls.html  first_scene.html  index.html  interface.html  ogitor.qhp  style.css
Ogitor/: CMakeLists.txt
Ogitor/include/: AxisGizmo.h  BaseEditor.h  BaseSerializer.h  BillboardSetEditor.h  CameraEditor.h  CameraVisualHelper.h  DefaultEvents.h  EditableMeshEditor.h  EntityEditor.h  Event.h  EventManager.h  FolderEditor.h  LightEditor.h  LightVisualHelper.h  MarkerEditor.h  MultiSelEditor.h  NodeEditor.h  OBBoxRenderable.h  OFSDataStream.h  OFSSceneSerializer.h  Ogitors.h  OgitorsClipboardManager.h  OgitorsDefinitions.h  OgitorsDelegates.h  OgitorsExports.h  OgitorsGlobals.h  OgitorsMasterView.h  OgitorsPagedWorldSection.h  OgitorsPaging.h  OgitorsPhysics.h  OgitorsPrerequisites.h  OgitorsProperty.h  OgitorsRoot.h  OgitorsScriptConsole.h  OgitorsScriptInterpreter.h  OgitorsSingleton.h  OgitorsSystem.h  OgitorsUndoManager.h  OgitorsUtils.h  OgitorsView.h  (+21 more)
Ogitor/src/: AxisGizmo.cpp  BaseEditor.cpp  BillboardSetEditor.cpp  CameraEditor.cpp  CameraVisualHelper.cpp  DefaultEvents.cpp  EditableMeshEditor.cpp  EditableMeshEditorEditing.cpp  EntityEditor.cpp  EventManager.cpp  FolderEditor.cpp  LightEditor.cpp  LightVisualHelper.cpp  MarkerEditor.cpp  MultiSelEditor.cpp  NodeEditor.cpp  OBBoxRenderable.cpp  OFSDataStream.cpp  OFSSceneSerializer.cpp  OgitorsClipboardManager.cpp  OgitorsMasterView.cpp  OgitorsPagedWorldSection.cpp  OgitorsPaging.cpp  OgitorsPhysics.cpp  OgitorsProperty.cpp  OgitorsRoot.cpp  OgitorsRootRegExp.cpp  OgitorsRootUtilityFunctions.cpp  OgitorsScriptConsole.cpp  OgitorsScriptInterpreter.cpp  OgitorsSystem.cpp  OgitorsUndoManager.cpp  OgitorsUtils.cpp  OgitorsView.cpp  PGInstanceEditor.cpp  PGInstanceManager.cpp  ParticleEditor.cpp  PlaneEditor.cpp  PrecompiledHeaders.cpp  RFSDataStream.cpp  (+22 more)
OgreOfsPlugin/: CMakeLists.txt
OgreOfsPlugin/include/: OfsFileSystem.h
OgreOfsPlugin/src/: OfsFileSystem.cpp  Plugin.cpp
Plugins/CustomSerializer/: CMakeLists.txt  CustomSerializer.cpp  CustomSerializer.h
Plugins/DotSceneSerializer/: CMakeLists.txt  DotSceneSerializer.cpp  DotSceneSerializer.h  DotSceneSerializerExport.cpp
Plugins/OgAngelDialogManager/: AngelDialogManagerPlugin.cpp  AngelDialogManagerPlugin.h  CMakeLists.txt  dialog.cpp  dialog.hxx  inputwidgets.cpp  inputwidgets.hxx
Plugins/OgAngelScript/: AngelScriptInterpreter.cpp  AngelScriptInterpreter.h  Bindings.cpp  Bindings.h  Bindings_Base.cpp  Bindings_Base.h  Bindings_Enum.h  Bindings_MultiSelection.cpp  Bindings_MultiSelection.h  Bindings_Ogre.cpp  Bindings_Ogre.h  Bindings_Property.cpp  Bindings_Property.h  Bindings_Root.h  Bindings_System.h  Bindings_UTF.h  Bindings_Utils.h  Bindings_Viewport.cpp  Bindings_Viewport.h  CMakeLists.txt  ScriptStringExtensions.cpp  ScriptStringExtensions.h  scripthelper.cpp  stdvector.h
Plugins/OgCaelum/: CMakeLists.txt  CaelumEditor.cpp  CaelumEditor.h
Plugins/OgHydrax/: CMakeLists.txt  HydraxWaterEditor.cpp  HydraxWaterEditor.h
Plugins/OgMaterialEditor/: CMakeLists.txt  MaterialEditor.cpp  MaterialEditor.h  Plugin.cpp  Plugin.h  TechniqueEditor.cpp  TechniqueEditor.h  materialeditorprefseditor.cpp  materialeditorprefseditor.hxx  materialeditorprefstab.ui  materialhighlighter.cpp  materialhighlighter.hxx  materialtexteditor.cpp  materialtexteditor.hxx  materialtexteditorcodec.cpp  materialtexteditorcodec.hxx  materialview.cpp  materialview.hxx
Plugins/OgModularZone/: CMakeLists.txt  ModularZoneEditor.cpp  ModularZoneEditor.h  ModularZoneFactory.cpp  ModularZoneFactory.h  ModularZonePlugin.cpp  ModularZonePlugin.h  ModularZoneToolbar.cpp  ModularZoneToolbar.hxx  PortalEditor.cpp  PortalEditor.h  PortalFactory.cpp  PortalFactory.h  PortalOutlineRenderable.cpp  PortalOutlineRenderable.h  ZoneInfo.h  ZoneListWidget.cpp  ZoneListWidget.hxx  exportzonedialog.cpp  exportzonedialog.hxx  exportzonedialog.ui  portalsizedialog.cpp  portalsizedialog.hxx  portalsizedialog.ui
Plugins/OgPythonQtScript/: CMakeLists.txt  PythonqtInterpreter.cpp  PythonqtInterpreter.h  PythonqtScriptrunner.cpp  PythonqtScriptrunner.h
RunPath/: CMakeLists.txt
SceneLoader/: CMakeLists.txt  ReadMe.txt
qtOfs/: CMakeLists.txt
qtOfs/res/: qtOfs.qrc  (+1 more)
qtOgitor/: CMakeLists.txt  aboutdialog.ui  addscriptaction.ui  addtemplatedialog.ui  addterraindialog.ui  calculateblendmapdialog.ui  createterraindialog.ui  eucliddialog.ui  importheightmapdialog.ui  manageTerrainDialog.ui  manageterraindialog.ui  ogitorpreferencestab.ui  settingsdialog.ui  shortcutsettings.ui  userdefineddialog.ui  welcome.ui
(+497 files in other folders)
